--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Stock Trade Calculator</title>
@@ -49,7 +50,14 @@
     .footer{margin-top:14px;color:var(--muted);font-size:13px;text-align:center}
 
     @media (max-width:820px){.grid{grid-template-columns:1fr}.logo{display:none}}
-  </style>
+  @media (max-width: 768px) {
+  body { padding: 10px; }
+  .container { width: 100%; padding: 15px; }
+  nav ul { flex-direction: column; gap: 10px; }
+  h1 { font-size: 1.8rem; }
+  p { font-size: 1rem; }
+}
+</style>
 </head>
 <body>
   <div class="wrap">
