--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
     .profit{background:linear-gradient(90deg, rgba(16,185,129,0.12), rgba(16,185,129,0.04));color:var(--green)}
     .loss{background:linear-gradient(90deg, rgba(220,38,38,0.1), rgba(220,38,38,0.03));color:var(--red)}
 
-    /* boxed borders style */
     .box-title{font-weight:700;margin-bottom:8px}
     .box{border:1px solid rgba(255,255,255,0.04);padding:12px;border-radius:10px}
 
-    /* progress bar */
     .progress-wrap{height:12px;background:rgba(255,255,255,0.03);border-radius:8px;overflow:hidden}
     .progress-bar{height:100%;width:0%;background:linear-gradient(90deg,var(--accent),#10b981);transition:width 350ms linear}
 
@@ -66,10 +64,10 @@
         <div class="box">
           <div class="box-title">BUY SECTION</div>
           <label>Buy Price (Rs.)</label>
-          <input id="buyPrice" type="number" min="0" step="0.01" placeholder="e.g. 60.80">
+          <input id="buyPrice" type="number" min="0" step="0.01">
 
           <label style="margin-top:10px">Buy Quantity</label>
-          <input id="buyQty" type="number" min="1" step="1" placeholder="e.g. 10">
+          <input id="buyQty" type="number" min="1" step="1">
 
           <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
             <button id="buyBtn" class="btn">Calculate Buy</button>
@@ -80,7 +78,7 @@
             <div class="row"><div>Buy Total</div><div class="value" id="buyTotalDisplay">Rs. 0.00</div></div>
             <div class="row"><div>Buy Fee (1.120%)</div><div class="value" id="buyFeeDisplay">Rs. 0.00</div></div>
             <div class="row"><div>Total to Pay</div><div class="value" id="combinedBuyDisplay">Rs. 0.00</div></div>
-            <div style="margin-top:10px;text-align:center;color:var(--muted);font-size:13px">Click <b>Continue to Sell</b> to enter sell details</div>
+            <div style="margin-top:10px;text-align:center;color:var(--muted)">Click <b>Continue to Sell</b></div>
             <div style="margin-top:10px;display:flex;justify-content:center">
               <button id="toSell" class="btn" disabled>Continue to Sell</button>
             </div>
@@ -92,10 +90,10 @@
         <div class="box">
           <div class="box-title">SELL SECTION</div>
           <label>Sell Price (Rs.)</label>
-          <input id="sellPrice" type="number" min="0" step="0.01" placeholder="e.g. 60.90" disabled>
+          <input id="sellPrice" type="number" min="0" step="0.01" disabled>
 
           <label style="margin-top:10px">Sell Quantity</label>
-          <input id="sellQty" type="number" min="1" step="1" placeholder="e.g. 10" disabled>
+          <input id="sellQty" type="number" min="1" step="1" disabled>
 
           <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
             <button id="calcSell" class="btn" disabled>Calculate Sell & Profit</button>
@@ -119,149 +117,128 @@
 
     <div style="margin-top:18px" class="card">
       <div style="display:flex;justify-content:space-between;align-items:center">
-        <div class="muted">All values show two decimal places • Fees rate 1.120%</div>
-        <div>
-          <button id="downloadBtn" class="btn secondary">Download Result</button>
+        <div class="muted">All values show two decimals • Fee 1.120%</div>
+        <div style="display:flex;gap:8px">
           <button id="runAgain" class="btn">Run Again</button>
+
+          <!-- 🔥 NEW BUTTON HERE -->
+          <button id="diffBtn" class="btn secondary">Difference Page</button>
+
         </div>
       </div>
     </div>
 
-    <div class="footer">Tip: Fill BUY first, click <b>Calculate Buy</b>, then click <b>Continue to Sell</b>.</div>
+    <div class="footer">Tip: Fill BUY first, then SELL.</div>
   </div>
 
 <script>
 (function(){
-  // Elements
-  const buyPrice = document.getElementById('buyPrice');
-  const buyQty = document.getElementById('buyQty');
-  const buyBtn = document.getElementById('buyBtn');
-  const resetBuy = document.getElementById('resetBuy');
-  const buyResult = document.getElementById('buyResult');
-  const buyTotalDisplay = document.getElementById('buyTotalDisplay');
-  const buyFeeDisplay = document.getElementById('buyFeeDisplay');
-  const combinedBuyDisplay = document.getElementById('combinedBuyDisplay');
-  const toSell = document.getElementById('toSell');
+  const buyPrice=document.getElementById('buyPrice');
+  const buyQty=document.getElementById('buyQty');
+  const buyBtn=document.getElementById('buyBtn');
+  const resetBuy=document.getElementById('resetBuy');
+  const buyResult=document.getElementById('buyResult');
+  const buyTotalDisplay=document.getElementById('buyTotalDisplay');
+  const buyFeeDisplay=document.getElementById('buyFeeDisplay');
+  const combinedBuyDisplay=document.getElementById('combinedBuyDisplay');
+  const toSell=document.getElementById('toSell');
 
-  const sellPrice = document.getElementById('sellPrice');
-  const sellQty = document.getElementById('sellQty');
-  const calcSell = document.getElementById('calcSell');
-  const resetAll = document.getElementById('resetAll');
-  const sellResult = document.getElementById('sellResult');
-  const sellTotalDisplay = document.getElementById('sellTotalDisplay');
-  const sellFeeDisplay = document.getElementById('sellFeeDisplay');
-  const feeTotalDisplay = document.getElementById('feeTotalDisplay');
-  const profitBeforeDisplay = document.getElementById('profitBeforeDisplay');
-  const finalProfitDisplay = document.getElementById('finalProfitDisplay');
-  const finalBox = document.getElementById('finalBox');
+  const sellPrice=document.getElementById('sellPrice');
+  const sellQty=document.getElementById('sellQty');
+  const calcSell=document.getElementById('calcSell');
+  const resetAll=document.getElementById('resetAll');
+  const sellResult=document.getElementById('sellResult');
+  const sellTotalDisplay=document.getElementById('sellTotalDisplay');
+  const sellFeeDisplay=document.getElementById('sellFeeDisplay');
+  const feeTotalDisplay=document.getElementById('feeTotalDisplay');
+  const profitBeforeDisplay=document.getElementById('profitBeforeDisplay');
+  const finalProfitDisplay=document.getElementById('finalProfitDisplay');
+  const finalBox=document.getElementById('finalBox');
 
-  const progressWrap = document.getElementById('progressWrap');
-  const progressBar = document.getElementById('progressBar');
-  const runAgain = document.getElementById('runAgain');
-  const downloadBtn = document.getElementById('downloadBtn');
+  const progressWrap=document.getElementById('progressWrap');
+  const progressBar=document.getElementById('progressBar');
+  const runAgain=document.getElementById('runAgain');
 
-  const FEE_RATE = 1.120 / 100;
+  const diffBtn=document.getElementById('diffBtn');
 
-  function formatR(x){ return 'Rs. ' + Number(x || 0).toFixed(2); }
+  const FEE_RATE=1.120/100;
+  function formatR(x){return 'Rs. '+Number(x||0).toFixed(2);}
 
-  // Buy calculate
-  buyBtn.addEventListener('click', function(){
-    const p = parseFloat(buyPrice.value);
-    const q = parseInt(buyQty.value,10);
-    if(!isFinite(p) || p<=0){ alert('Enter valid Buy Price'); buyPrice.focus(); return; }
-    if(!Number.isInteger(q) || q<=0){ alert('Enter valid Buy Quantity'); buyQty.focus(); return; }
-
-    // simulate small progress
-    animateProgress('Processing BUY', ()=>{
-      const bt = p*q;
-      const bf = bt * FEE_RATE;
-      const cb = bt + bf;
-      buyTotalDisplay.textContent = formatR(bt);
-      buyFeeDisplay.textContent = formatR(bf);
-      combinedBuyDisplay.textContent = formatR(cb);
-      buyResult.hidden = false;
-      toSell.disabled = false;
-      // enable sell inputs when continue clicked
-    });
-  });
-
-  resetBuy.addEventListener('click', ()=>{
-    buyPrice.value=''; buyQty.value=''; buyResult.hidden = true; toSell.disabled = true; sellPrice.disabled=true; sellQty.disabled=true; calcSell.disabled=true; sellResult.hidden=true; finalBox.className='final'; finalProfitDisplay.textContent = formatR(0);
-  });
-
-  toSell.addEventListener('click', ()=>{
-    // enable sell inputs
-    sellPrice.disabled = false; sellQty.disabled = false; calcSell.disabled = false; sellPrice.focus();
-  });
-
-  // Sell calculate
-  calcSell.addEventListener('click', function(){
-    const sp = parseFloat(sellPrice.value);
-    const sq = parseInt(sellQty.value,10);
-    const bp = parseFloat(buyPrice.value);
-    const bq = parseInt(buyQty.value,10);
-    if(!isFinite(sp) || sp<=0){ alert('Enter valid Sell Price'); sellPrice.focus(); return; }
-    if(!Number.isInteger(sq) || sq<=0){ alert('Enter valid Sell Quantity'); sellQty.focus(); return; }
-
-    animateProgress('Processing SELL', ()=>{
-      const st = sp*sq;
-      const sf = st * FEE_RATE;
-      const bt = bp*bq;
-      const bf = bt * FEE_RATE;
-      const feeTotal = bf + sf;
-      const profitBefore = st - bt;
-      const finalProfit = profitBefore - feeTotal;
-
-      sellTotalDisplay.textContent = formatR(st);
-      sellFeeDisplay.textContent = formatR(sf);
-      feeTotalDisplay.textContent = formatR(feeTotal);
-      profitBeforeDisplay.textContent = formatR(profitBefore);
-      finalProfitDisplay.textContent = formatR(finalProfit);
-      sellResult.hidden = false;
-
-      // color final box green/red
-      if(finalProfit >= 0){ finalBox.classList.remove('loss'); finalBox.classList.add('profit'); }
-      else{ finalBox.classList.remove('profit'); finalBox.classList.add('loss'); }
-    });
-  });
-
-  resetAll.addEventListener('click', ()=>{
-    // reset all fields
-    buyPrice.value=''; buyQty.value=''; sellPrice.value=''; sellQty.value=''; buyResult.hidden=true; sellResult.hidden=true; toSell.disabled=true; sellPrice.disabled=true; sellQty.disabled=true; calcSell.disabled=true; finalBox.className='final'; finalProfitDisplay.textContent = formatR(0);
-  });
-
-  runAgain.addEventListener('click', ()=>{
-    // clear screen: reset all and scroll to top
-    resetAll.click(); window.scrollTo({top:0,behavior:'smooth'});
-  });
-
-  downloadBtn.addEventListener('click', ()=>{
-    const content = [
-      'Buy Total: ' + buyTotalDisplay.textContent,
-      'Buy Fee: ' + buyFeeDisplay.textContent,
-      'Combined Buy: ' + combinedBuyDisplay.textContent,
-      'Sell Total: ' + sellTotalDisplay.textContent,
-      'Sell Fee: ' + sellFeeDisplay.textContent,
-      'Combined Fees: ' + feeTotalDisplay.textContent,
-      'Profit Before Fees: ' + profitBeforeDisplay.textContent,
-      'Final Profit: ' + finalProfitDisplay.textContent
-    ].join('\n');
-    const blob = new Blob([content],{type:'text/plain'});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a'); a.href = url; a.download = 'trade_result.txt'; a.click(); URL.revokeObjectURL(url);
-  });
-
-  // progress animation helper
-  function animateProgress(message, cb){
-    progressWrap.hidden = false; progressBar.style.width = '0%';
-    let step = 0;
-    const id = setInterval(()=>{
-      step += Math.random()*25 + 5; // random faster feel
-      if(step>=100) step = 100;
-      progressBar.style.width = step + '%';
-      if(step>=100){ clearInterval(id); setTimeout(()=>{ progressBar.style.width = '0%'; progressWrap.hidden=true; cb(); }, 300); }
-    }, 80);
+  function animate(cb){
+    progressWrap.hidden=false;
+    progressBar.style.width='0%';
+    let x=0;
+    const id=setInterval(()=>{
+      x+=20+Math.random()*20;
+      if(x>=100)x=100;
+      progressBar.style.width=x+'%';
+      if(x===100){
+        clearInterval(id);
+        setTimeout(()=>{progressWrap.hidden=true;cb();},300);
+      }
+    },100);
   }
+
+  buyBtn.onclick=()=>{
+    const p=parseFloat(buyPrice.value);
+    const q=parseFloat(buyQty.value);
+    if(!p||!q||p<=0||q<=0){alert("Invalid BUY input");return;}
+    animate(()=>{
+      const t=p*q;
+      const f=t*FEE_RATE;
+      const c=t+f;
+      buyTotalDisplay.textContent=formatR(t);
+      buyFeeDisplay.textContent=formatR(f);
+      combinedBuyDisplay.textContent=formatR(c);
+      buyResult.hidden=false;
+      toSell.disabled=false;
+    });
+  };
+
+  toSell.onclick=()=>{sellPrice.disabled=false;sellQty.disabled=false;calcSell.disabled=false;}
+
+  calcSell.onclick=()=>{
+    const sp=parseFloat(sellPrice.value);
+    const sq=parseFloat(sellQty.value);
+    const bp=parseFloat(buyPrice.value);
+    const bq=parseFloat(buyQty.value);
+    if(!sp||!sq||sp<=0||sq<=0){alert("Invalid SELL input");return;}
+
+    animate(()=>{
+      const st=sp*sq;
+      const sf=st*FEE_RATE;
+      const bt=bp*bq;
+      const bf=bt*FEE_RATE;
+      const fees=sf+bf;
+      const pb=st-bt;
+      const fp=pb-fees;
+
+      sellTotalDisplay.textContent=formatR(st);
+      sellFeeDisplay.textContent=formatR(sf);
+      feeTotalDisplay.textContent=formatR(fees);
+      profitBeforeDisplay.textContent=formatR(pb);
+      finalProfitDisplay.textContent=formatR(fp);
+
+      sellResult.hidden=false;
+
+      if(fp>=0){finalBox.className="final profit";}
+      else{finalBox.className="final loss";}
+    });
+  };
+
+  resetBuy.onclick=()=>{
+    buyPrice.value='';buyQty.value='';
+    buyResult.hidden=true;toSell.disabled=true;
+    sellPrice.disabled=true;sellQty.disabled=true;
+    calcSell.disabled=true;sellResult.hidden=true;
+  };
+
+  resetAll.onclick=()=>{location.reload();};
+
+  runAgain.onclick=()=>{location.reload();};
+
+  // 🔥 NEW BUTTON ACTION
+  diffBtn.onclick=()=>{ window.location.href="difference.html"; };
 
 })();
 </script>
