--- a/index.html
+++ b/index.html
@@ -11,42 +11,81 @@
       --card-pad:18px; --radius:12px; --mono: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     }
     *{box-sizing:border-box}
-    body{font-family:var(--mono);background:linear-gradient(180deg,#071229 0%, #081226 100%);color:#e6eef6;margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px}
+    body{
+      font-family:var(--mono);
+      background:linear-gradient(180deg,#071229 0%, #081226 100%);
+      color:#e6eef6;margin:0;min-height:100vh;
+      display:flex;align-items:center;justify-content:center;padding:24px
+    }
     .wrap{width:100%;max-width:920px}
 
-    .header{background:linear-gradient(90deg, rgba(6,182,212,0.06), rgba(16,185,129,0.03));border-radius:14px;padding:18px;margin-bottom:18px;display:flex;align-items:center;gap:12px}
-    .logo{width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#10b981);display:flex;align-items:center;justify-content:center;font-weight:700;color:#021018}
-    .title h1{margin:0;font-size:20px} .title p{margin:2px 0 0;font-size:13px;color:var(--muted)}
+    .header{
+      background:linear-gradient(90deg, rgba(6,182,212,0.06),
+      rgba(16,185,129,0.03));
+      border-radius:14px;padding:18px;margin-bottom:18px;
+      display:flex;align-items:center;gap:12px
+    }
+    .logo{
+      width:56px;height:56px;border-radius:10px;
+      background:linear-gradient(135deg,var(--accent),#10b981);
+      display:flex;align-items:center;justify-content:center;
+      font-weight:700;color:#021018
+    }
+    .title h1{margin:0;font-size:20px}
+    .title p{margin:2px 0 0;font-size:13px;color:var(--muted)}
 
     .grid{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-    .card{background:var(--card);border-radius:var(--radius);padding:var(--card-pad);box-shadow:0 6px 20px rgba(2,6,23,0.6);}
+    .card{
+      background:var(--card);border-radius:var(--radius);
+      padding:var(--card-pad);box-shadow:0 6px 20px rgba(2,6,23,0.6);
+    }
 
     label{display:block;font-size:13px;color:var(--muted);margin-bottom:6px}
-    input[type="number"]{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.03);background:var(--glass);color:inherit;font-size:14px}
-    .muted{font-size:12px;color:var(--muted)}
+    input[type="number"]{
+      width:100%;padding:10px;border-radius:8px;
+      border:1px solid rgba(255,255,255,0.03);
+      background:var(--glass);color:inherit;font-size:14px
+    }
 
-    .btn{display:inline-flex;align-items:center;gap:8px;background:var(--accent);color:#021018;padding:10px 14px;border-radius:10px;border:0;cursor:pointer;font-weight:600}
-    .btn.secondary{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
+    .btn{
+      display:inline-flex;align-items:center;gap:8px;
+      background:var(--accent);color:#021018;
+      padding:10px 14px;border-radius:10px;border:0;
+      cursor:pointer;font-weight:600
+    }
+    .btn.secondary{
+      background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)
+    }
 
-    .summary{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));padding:12px;border-radius:10px}
-    .row{display:flex;justify-content:space-between;padding:8px 0;border-bottom:1px dashed rgba(255,255,255,0.02)}
+    .summary{
+      background:linear-gradient(180deg, rgba(255,255,255,0.02),
+      rgba(255,255,255,0.01));padding:12px;border-radius:10px
+    }
+    .row{
+      display:flex;justify-content:space-between;padding:8px 0;
+      border-bottom:1px dashed rgba(255,255,255,0.02)
+    }
     .row:last-child{border-bottom:0}
     .value{font-weight:700}
 
     .final{font-size:18px;padding:14px;border-radius:10px;text-align:center}
-    .profit{background:linear-gradient(90deg, rgba(16,185,129,0.12), rgba(16,185,129,0.04));color:var(--green)}
-    .loss{background:linear-gradient(90deg, rgba(220,38,38,0.1), rgba(220,38,38,0.03));color:var(--red)}
+    .profit{
+      background:linear-gradient(90deg, rgba(16,185,129,0.12),
+      rgba(16,185,129,0.04));color:var(--green)
+    }
+    .loss{
+      background:linear-gradient(90deg, rgba(220,38,38,0.1),
+      rgba(220,38,38,0.03));color:var(--red)
+    }
 
-    .box-title{font-weight:700;margin-bottom:8px}
-    .box{border:1px solid rgba(255,255,255,0.04);padding:12px;border-radius:10px}
+    .footer{
+      margin-top:14px;color:var(--muted);font-size:13px;text-align:center
+    }
 
-    .progress-wrap{height:12px;background:rgba(255,255,255,0.03);border-radius:8px;overflow:hidden}
-    .progress-bar{height:100%;width:0%;background:linear-gradient(90deg,var(--accent),#10b981);transition:width 350ms linear}
-
-    .controls{display:flex;gap:8px;align-items:center}
-    .footer{margin-top:14px;color:var(--muted);font-size:13px;text-align:center}
-
-    @media (max-width:820px){.grid{grid-template-columns:1fr}.logo{display:none}}
+    @media (max-width:820px){
+      .grid{grid-template-columns:1fr}
+      .logo{display:none}
+    }
   </style>
 </head>
 <body>
@@ -60,187 +99,105 @@
     </div>
 
     <div class="grid">
+      <!-- BUY -->
       <div class="card">
-        <div class="box">
-          <div class="box-title">BUY SECTION</div>
-          <label>Buy Price (Rs.)</label>
-          <input id="buyPrice" type="number" min="0" step="0.01">
+        <label>Buy Price (Rs.)</label>
+        <input id="buyPrice" type="number" step="0.01">
 
-          <label style="margin-top:10px">Buy Quantity</label>
-          <input id="buyQty" type="number" min="1" step="1">
+        <label style="margin-top:10px">Buy Quantity</label>
+        <input id="buyQty" type="number" step="1">
 
-          <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-            <button id="buyBtn" class="btn">Calculate Buy</button>
-            <button id="resetBuy" class="btn secondary">Reset Buy</button>
-          </div>
+        <button id="buyBtn" class="btn" style="margin-top:12px">Calculate Buy</button>
 
-          <div style="margin-top:12px" id="buyResult" class="summary" hidden>
-            <div class="row"><div>Buy Total</div><div class="value" id="buyTotalDisplay">Rs. 0.00</div></div>
-            <div class="row"><div>Buy Fee (1.120%)</div><div class="value" id="buyFeeDisplay">Rs. 0.00</div></div>
-            <div class="row"><div>Total to Pay</div><div class="value" id="combinedBuyDisplay">Rs. 0.00</div></div>
-            <div style="margin-top:10px;text-align:center;color:var(--muted)">Click <b>Continue to Sell</b></div>
-            <div style="margin-top:10px;display:flex;justify-content:center">
-              <button id="toSell" class="btn" disabled>Continue to Sell</button>
-            </div>
-          </div>
+        <div id="buyResult" class="summary" hidden style="margin-top:12px">
+          <div class="row"><div>Buy Total</div><div class="value" id="buyTotal">Rs. 0.00</div></div>
+          <div class="row"><div>Buy Fee (1.120%)</div><div class="value" id="buyFee">Rs. 0.00</div></div>
+          <div class="row"><div>Total to Pay</div><div class="value" id="buyNet">Rs. 0.00</div></div>
         </div>
       </div>
 
+      <!-- SELL (Always Active) -->
       <div class="card">
-        <div class="box">
-          <div class="box-title">SELL SECTION</div>
-          <label>Sell Price (Rs.)</label>
-          <input id="sellPrice" type="number" min="0" step="0.01" disabled>
+        <label>Sell Price (Rs.)</label>
+        <input id="sellPrice" type="number" step="0.01">
 
-          <label style="margin-top:10px">Sell Quantity</label>
-          <input id="sellQty" type="number" min="1" step="1" disabled>
+        <label style="margin-top:10px">Sell Quantity</label>
+        <input id="sellQty" type="number" step="1">
 
-          <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-            <button id="calcSell" class="btn" disabled>Calculate Sell & Profit</button>
-            <button id="resetAll" class="btn secondary">Reset All</button>
-          </div>
+        <button id="sellBtn" class="btn" style="margin-top:12px">Calculate Sell & Profit</button>
 
-          <div style="margin-top:12px" id="sellResult" class="summary" hidden>
-            <div class="row"><div>Sell Total</div><div class="value" id="sellTotalDisplay">Rs. 0.00</div></div>
-            <div class="row"><div>Sell Fee (1.120%)</div><div class="value" id="sellFeeDisplay">Rs. 0.00</div></div>
-            <div class="row"><div>Combined Fees</div><div class="value" id="feeTotalDisplay">Rs. 0.00</div></div>
-            <div class="row"><div>Profit Before Fees</div><div class="value" id="profitBeforeDisplay">Rs. 0.00</div></div>
-            <div style="margin-top:10px" id="finalBox" class="final">Final Profit: <span id="finalProfitDisplay">Rs. 0.00</span></div>
-          </div>
+        <div id="sellResult" class="summary" hidden style="margin-top:12px">
+          <div class="row"><div>Sell Total</div><div class="value" id="sellTotal">Rs. 0.00</div></div>
+          <div class="row"><div>Sell Fee (1.120%)</div><div class="value" id="sellFee">Rs. 0.00</div></div>
+          <div class="row"><div>Total Fees</div><div class="value" id="allFees">Rs. 0.00</div></div>
+          <div class="row"><div>Profit Before Fees</div><div class="value" id="pBefore">Rs. 0.00</div></div>
 
-          <div style="margin-top:12px">
-            <div class="progress-wrap" hidden id="progressWrap"><div class="progress-bar" id="progressBar"></div></div>
+          <div id="finalBox" class="final">
+            Final Profit: <span id="profitFinal">Rs. 0.00</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div style="margin-top:18px" class="card">
-      <div style="display:flex;justify-content:space-between;align-items:center">
-        <div class="muted">All values show two decimals • Fee 1.120%</div>
-        <div style="display:flex;gap:8px">
-          <button id="runAgain" class="btn">Run Again</button>
-
-          <!-- 🔥 NEW BUTTON HERE -->
-          <button id="diffBtn" class="btn secondary">Difference Page</button>
-
-        </div>
-      </div>
+    <!-- BLUE BUTTON HERE -->
+    <div style="margin-top:18px;text-align:center">
+      <button class="btn" style="background:#1E40AF;color:white"
+        onclick="location.href='difference.html'">
+        Go to Difference Page
+      </button>
     </div>
 
-    <div class="footer">Tip: Fill BUY first, then SELL.</div>
+    <div class="footer">Tip: Fill BUY first, then SELL for accurate profit.</div>
   </div>
 
 <script>
-(function(){
-  const buyPrice=document.getElementById('buyPrice');
-  const buyQty=document.getElementById('buyQty');
-  const buyBtn=document.getElementById('buyBtn');
-  const resetBuy=document.getElementById('resetBuy');
-  const buyResult=document.getElementById('buyResult');
-  const buyTotalDisplay=document.getElementById('buyTotalDisplay');
-  const buyFeeDisplay=document.getElementById('buyFeeDisplay');
-  const combinedBuyDisplay=document.getElementById('combinedBuyDisplay');
-  const toSell=document.getElementById('toSell');
+const FEE = 1.120 / 100;
+const r = n => "Rs. " + Number(n).toFixed(2);
 
-  const sellPrice=document.getElementById('sellPrice');
-  const sellQty=document.getElementById('sellQty');
-  const calcSell=document.getElementById('calcSell');
-  const resetAll=document.getElementById('resetAll');
-  const sellResult=document.getElementById('sellResult');
-  const sellTotalDisplay=document.getElementById('sellTotalDisplay');
-  const sellFeeDisplay=document.getElementById('sellFeeDisplay');
-  const feeTotalDisplay=document.getElementById('feeTotalDisplay');
-  const profitBeforeDisplay=document.getElementById('profitBeforeDisplay');
-  const finalProfitDisplay=document.getElementById('finalProfitDisplay');
-  const finalBox=document.getElementById('finalBox');
+buyBtn.onclick = () => {
+  let p = parseFloat(buyPrice.value);
+  let q = parseFloat(buyQty.value);
+  if(!p || !q) return alert("Enter valid BUY values");
 
-  const progressWrap=document.getElementById('progressWrap');
-  const progressBar=document.getElementById('progressBar');
-  const runAgain=document.getElementById('runAgain');
+  let t = p*q;
+  let f = t*FEE;
+  let net = t+f;
 
-  const diffBtn=document.getElementById('diffBtn');
+  buyTotal.textContent = r(t);
+  buyFee.textContent = r(f);
+  buyNet.textContent = r(net);
+  buyResult.hidden = false;
+};
 
-  const FEE_RATE=1.120/100;
-  function formatR(x){return 'Rs. '+Number(x||0).toFixed(2);}
+sellBtn.onclick = () => {
+  let sp = parseFloat(sellPrice.value);
+  let sq = parseFloat(sellQty.value);
+  let bp = parseFloat(buyPrice.value);
+  let bq = parseFloat(buyQty.value);
 
-  function animate(cb){
-    progressWrap.hidden=false;
-    progressBar.style.width='0%';
-    let x=0;
-    const id=setInterval(()=>{
-      x+=20+Math.random()*20;
-      if(x>=100)x=100;
-      progressBar.style.width=x+'%';
-      if(x===100){
-        clearInterval(id);
-        setTimeout(()=>{progressWrap.hidden=true;cb();},300);
-      }
-    },100);
-  }
+  if(!sp || !sq) return alert("Enter valid SELL values");
+  if(!bp || !bq) return alert("Fill BUY section first");
 
-  buyBtn.onclick=()=>{
-    const p=parseFloat(buyPrice.value);
-    const q=parseFloat(buyQty.value);
-    if(!p||!q||p<=0||q<=0){alert("Invalid BUY input");return;}
-    animate(()=>{
-      const t=p*q;
-      const f=t*FEE_RATE;
-      const c=t+f;
-      buyTotalDisplay.textContent=formatR(t);
-      buyFeeDisplay.textContent=formatR(f);
-      combinedBuyDisplay.textContent=formatR(c);
-      buyResult.hidden=false;
-      toSell.disabled=false;
-    });
-  };
+  let st = sp*sq;
+  let sf = st*FEE;
 
-  toSell.onclick=()=>{sellPrice.disabled=false;sellQty.disabled=false;calcSell.disabled=false;}
+  let bt = bp*bq;
+  let bf = bt*FEE;
 
-  calcSell.onclick=()=>{
-    const sp=parseFloat(sellPrice.value);
-    const sq=parseFloat(sellQty.value);
-    const bp=parseFloat(buyPrice.value);
-    const bq=parseFloat(buyQty.value);
-    if(!sp||!sq||sp<=0||sq<=0){alert("Invalid SELL input");return;}
+  let fees = sf + bf;
+  let pb = st - bt;
+  let fp = pb - fees;
 
-    animate(()=>{
-      const st=sp*sq;
-      const sf=st*FEE_RATE;
-      const bt=bp*bq;
-      const bf=bt*FEE_RATE;
-      const fees=sf+bf;
-      const pb=st-bt;
-      const fp=pb-fees;
+  sellTotal.textContent = r(st);
+  sellFee.textContent = r(sf);
+  allFees.textContent = r(fees);
+  pBefore.textContent = r(pb);
+  profitFinal.textContent = r(fp);
 
-      sellTotalDisplay.textContent=formatR(st);
-      sellFeeDisplay.textContent=formatR(sf);
-      feeTotalDisplay.textContent=formatR(fees);
-      profitBeforeDisplay.textContent=formatR(pb);
-      finalProfitDisplay.textContent=formatR(fp);
+  finalBox.className = fp >= 0 ? "final profit" : "final loss";
 
-      sellResult.hidden=false;
-
-      if(fp>=0){finalBox.className="final profit";}
-      else{finalBox.className="final loss";}
-    });
-  };
-
-  resetBuy.onclick=()=>{
-    buyPrice.value='';buyQty.value='';
-    buyResult.hidden=true;toSell.disabled=true;
-    sellPrice.disabled=true;sellQty.disabled=true;
-    calcSell.disabled=true;sellResult.hidden=true;
-  };
-
-  resetAll.onclick=()=>{location.reload();};
-
-  runAgain.onclick=()=>{location.reload();};
-
-  // 🔥 NEW BUTTON ACTION
-  diffBtn.onclick=()=>{ window.location.href="difference.html"; };
-
-})();
+  sellResult.hidden = false;
+};
 </script>
 </body>
 </html>
